--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@ http://www.tooplate.com/view/2111-pro-line
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#home"
+                    <a class="nav-link" href="nextlevelredmond.com"
                       >Home <span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#features">Features</a>
+                    <a class="nav-link" href="https://nextlevelredmond.com/about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#activities">Activities</a>
+                    <a class="nav-link" href="https://nextlevelredmond.com/courses">Courses</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#company">Company</a>
+                    <a class="nav-link" href="https://nextlevelredmond.com/faq">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="https://nextlevelredmond.com/enroll">Enroll</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link external" href="https://www.facebook.com/templatemo">FB Page</a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com/donate">Donate</a>
                   </li>
                 </ul>
               </div>
@@ -79,35 +79,13 @@ http://www.tooplate.com/view/2111-pro-line
       </div>
     </div>
 
-    <!-- Video Banner -->
-    <section class="tm-banner-section" id="tmVideoSection">
-      <div class="container tm-banner-text-container">
-        <div class="row">
-          <div class="col-12">
-            <header>
-              <h2 class="tm-banner-title">Pro Line Video</h2>
-              <p class="mx-auto tm-banner-subtitle">
-                The video background has a parallax effect. This is fluid and
-                full-width.
-              </p>
-            </header>
-          </div>
-        </div>
-      </div>
-
-      <!-- Video -->
-      <video id="hero-vid" autoplay="" loop="" muted>
-        <source src="videos/city-night-blur-01.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </section>
     <!-- Features -->
     <div class="container tm-features-section" id="features">
       <div class="row tm-features-row">
         <section class="col-md-6 col-sm-12 tm-feature-block">
           <header class="tm-feature-header">
-            <i class="fas fa-5x fa-anchor tm-feature-icon"></i>
-            <h3 class="tm-feature-h">Cras pretium diam ut metus</h3>
+            <i class="fas fa-5x fa-globe-americas tm-feature-icon"></i>
+            <h3 class="tm-feature-h">Mission</h3>
           </header>
           <p>
             Pro Line HTML5 Template is brought to you by
@@ -124,8 +102,8 @@ http://www.tooplate.com/view/2111-pro-line
         </section>
         <section class="col-md-6 col-sm-12 tm-feature-block">
           <header class="tm-feature-header">
-            <i class="fas fa-5x fa-atom tm-feature-icon"></i>
-            <h3 class="tm-feature-h">Cras pretium diam ut metus</h3>
+            <i class="fas fa-5x fa-graduation-cap tm-feature-icon"></i>
+            <h3 class="tm-feature-h">Education</h3>
           </header>
           <p>
             Phasellus tristique, sapien quis mattis pellentesque, felis turpis
@@ -216,168 +194,11 @@ http://www.tooplate.com/view/2111-pro-line
       </div>
     </div>
 
-    <section class="container tm-company-section" id="company">
-      <div class="row">
-        <div class="col-xl-9 col-lg-8 col-md-12 tm-company-left">
-          <div class="tm-company-about">
-            <div class="tm-company-img-container">
-              <img src="img/img-05.jpg" alt="Image" />
-            </div>
-            <div class="tm-company-about-text">
-              <header>
-                <h2 class="tm-company-about-header">Our Company</h2>
-              </header>
-              <p>
-                Phasellus fringilla convallis libero non aliquam. Morbi justo
-                lorem, varius ultricies pulvinar ac, aliquet quis ipsum.
-              </p>
-              <p class="mb-4">
-                Suspendisse aliquam pulvinar odio sed rhoncus. Cras pretium diam
-                ut metus tristique, a ultricies sapien euismod. Duis dui diam,
-                maximus ac ligula a, accumsan cursus ante.
-              </p>
-              <a href="#" class="btn tm-btn tm-float-right">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div
-          class="col-xl-9 col-lg-4 col-md-12 tm-company-right  ml-lg-auto mr-lg-0"
-        >
-          <div class="tm-company-right-inner">
-            <ul class="nav nav-tabs" id="tmCompanyTab" role="tablist">
-              <li class="nav-item">
-                <a
-                  class="nav-link tm-nav-link-border-right active"
-                  id="vision-tab"
-                  data-toggle="tab"
-                  href="#vision"
-                  role="tab"
-                  aria-controls="vision"
-                  aria-selected="true"
-                  >Vision</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link tm-no-border-right"
-                  id="mission-tab"
-                  data-toggle="tab"
-                  href="#mission"
-                  role="tab"
-                  aria-controls="mission"
-                  aria-selected="false"
-                  >Mission</a
-                >
-              </li>
-            </ul>
-            <div class="tab-content" id="tmTabContent">
-              <div
-                class="tab-pane fade show active"
-                id="vision"
-                role="tabpanel"
-                aria-labelledby="vision-tab"
-              >
-                <p>
-                  Phasellus suscipit sapien magna, vel dictum lorem fringilla.
-                </p>
-                <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia
-                  nostra.
-                </p>
-                <p>
-                  Nulla ornare ligula nibh, sit amet tristique magna efficitur
-                  eu.
-                </p>
-              </div>
-              <div
-                class="tab-pane fade"
-                id="mission"
-                role="tabpanel"
-                aria-labelledby="mission-tab"
-              >
-                <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia
-                  nostra.
-                </p>
-                <p>
-                  Nulla ornare ligula nibh, sit amet tristique magna efficitur
-                  eu.
-                </p>
-                <p>
-                  Phasellus suscipit sapien magna, vel dictum lorem fringilla.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Contact -->
-    <section class="container tm-contact-section" id="contact">
-      <div class="row">
-        <div class="col-xl-5 col-lg-6 col-md-12 tm-contact-left">
-          <div class="tm-contact-form-container ml-auto mr-0">
-            <header>
-              <h2 class="tm-contact-header">Contact Us</h2>
-            </header>
-            <form action="index.html" class="tm-contact-form" method="POST">
-              <div class="form-group">
-                <input
-                  type="text"
-                  id="contact_name"
-                  name="contact_name"
-                  class="form-control"
-                  placeholder="Name"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  type="email"
-                  id="contact_email"
-                  name="contact_email"
-                  class="form-control"
-                  placeholder="Email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <textarea
-                  rows="5"
-                  id="contact_message"
-                  name="contact_message"
-                  class="form-control"
-                  placeholder="Message"
-                  required
-                ></textarea>
-              </div>
-              <div class="tm-text-right">
-                <button type="submit" class="btn tm-btn tm-btn-big">
-                  Send It
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-xl-7 col-lg-6 col-md-12 tm-contact-right">
-          <div class="tm-contact-figure-block">
-            <figure class="d-inline-block">
-              <img src="img/img-06.jpg" alt="Image" class="img-fluid" />
-              <figcaption class="tm-contact-figcaption">
-                Nulla arcu tortor, mattis in diam eget, hendrerit vulputate
-                ligula. Nam non purus consequat, dictum lectus lobortis, laoreet
-                nibh. Cras vitae facilisis felis. Phasellus tristique.
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <footer class="container tm-footer">
       <div class="row tm-footer-row">
         <p class="col-md-10 col-sm-12 mb-0">
-          Copyright &copy; 2018 Company Name - Design:
-          <a rel="nofollow" href="https://www.facebook.com/tooplate" class="tm-footer-link">Tooplate</a>
+          Copyright &copy; 2020 NextLevel of Redmond.
         </p>
         <div class="col-md-2 col-sm-12 scrolltop">
           <div class="scroll icon"><i class="fa fa-4x fa-angle-up"></i></div>
