--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@ http://www.tooplate.com/view/2111-pro-line
 
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="nextlevelredmond.com"
-                      >Home <span class="sr-only">(current)</span></a
-                    >
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://nextlevelredmond.com/about">About</a>
+                    <a class="nav-link" href="nextlevelredmond.com">Home </a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="https://nextlevelredmond.com/about">About <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://nextlevelredmond.com/courses">Courses</a>
