--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ http://www.tooplate.com/view/2111-pro-line
     <div class="container" id="home">
       <div class="col-12 text-center">
         <div class="tm-page-header">
-          <i class="fas fa-4x fa-chart-bar mr-4"></i>
-          <h1 class="d-inline-block text-uppercase">Pro Line</h1>
+          <img src="img/logo3.png" />
+          <h1 class="d-inline-block">NextLevel</h1>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@ http://www.tooplate.com/view/2111-pro-line
         <div class="col-12">
           <div class="tm-parallax">
             <header class="tm-parallax-header">
-              <h2 class="">Activities</h2>
+              <h2 class="">The Team</h2>
             </header>
           </div>
         </div>
@@ -135,12 +135,13 @@ http://www.tooplate.com/view/2111-pro-line
               <img src="img/img-01.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-blue">Lorem ipsum dolor sit amet</h3>
+              <h3 class="tm-text-blue">Jay Dharmadhikari</h3>
               <p>
                 Orci varius natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mus. Sed eu turpis nec sem lacinia
                 condimentum et a orci.
               </p>
+              <a href="https://www.linkedin.com/in/jay-dharmadhikari-751745190" class="btn tm-btn tm-float-right">Contact</a>
             </div>
           </div>
         </div>
@@ -150,42 +151,13 @@ http://www.tooplate.com/view/2111-pro-line
               <img src="img/img-02.jpg" alt="Image" class="tm-activity-img" />
             </div>
             <div class="tm-activity-block-text">
-              <h3 class="tm-text-blue">Lorem ipsum dolor sit amet</h3>
+              <h3 class="tm-text-blue">Dhruv Naik</h3>
               <p>
                 Orci varius natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mus. Sed eu turpis nec sem lacinia
                 condimentum et a orci.
               </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="tm-activity-block">
-            <div class="tm-activity-img-container">
-              <img src="img/img-03.jpg" alt="Image" class="tm-activity-img" />
-            </div>
-            <div class="tm-activity-block-text">
-              <h3 class="tm-text-blue">Lorem ipsum dolor sit amet</h3>
-              <p>
-                Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Sed eu turpis nec sem lacinia
-                condimentum et a orci.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="tm-activity-block mr-lg-0 ml-lg-auto">
-            <div class="tm-activity-img-container">
-              <img src="img/img-04.jpg" alt="Image" class="tm-activity-img" />
-            </div>
-            <div class="tm-activity-block-text">
-              <h3 class="tm-text-blue">Lorem ipsum dolor sit amet</h3>
-              <p>
-                Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Sed eu turpis nec sem lacinia
-                condimentum et a orci.
-              </p>
+              <a href="https://www.linkedin.com/in/dhruv-naik-a4a21b18a" class="btn tm-btn tm-float-right">Contact</a>
             </div>
           </div>
         </div>
