--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@ http://www.tooplate.com/view/2111-pro-line
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="nextlevelredmond.com">Home </a>
+                    <a class="nav-link external" href="nextlevelredmond.com">Home </a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="https://nextlevelredmond.com/about">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com/about">About <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://nextlevelredmond.com/courses">Courses</a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com/courses">Courses</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://nextlevelredmond.com/faq">FAQ</a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com/faq">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://nextlevelredmond.com/enroll">Enroll</a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com/enroll">Enroll</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link external" href="https://nextlevelredmond.com/donate">Donate</a>
