--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2111-pro-line
               <div class="collapse navbar-collapse" id="tmMainNav">
                 <ul class="navbar-nav mx-auto tm-navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link external" href="nextlevelredmond.com">Home </a>
+                    <a class="nav-link external" href="https://nextlevelredmond.com">Home </a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link external" href="https://nextlevelredmond.com/about">About <span class="sr-only">(current)</span></a>
