--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>NextLevelRedmond</title>
+    <title>NextLevel Redmond</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
@@ -86,16 +86,10 @@ http://www.tooplate.com/view/2111-pro-line
             <h3 class="tm-feature-h">Mission</h3>
           </header>
           <p>
-            Pro Line HTML5 Template is brought to you by
-            <a rel="nofollow noopener" href="https://www.tooplate.com"
-              >Tooplate</a
-            >. This layout used Bootstrap v4.1.3 UI kit. You can easily modify
-            this template in any HTML editor for your site.
+            NextLevel Redmond is run by two Redmond High School students who are passionate about using their skills to help the community around them.
           </p>
           <p>
-            Sed interdum, purus vulputate congue luctus, lorem massa dignissim
-            nisi, sed condimentum nibh lorem quis lorem. Nulla sed erat
-            dignissim, tincidunt ante ac, egestas turpis.
+            Due to the pandemic, we are doing our best to provide free education over the internet. Students can learn important skills without leaving home.
           </p>
         </section>
         <section class="col-md-6 col-sm-12 tm-feature-block">
@@ -104,14 +98,10 @@ http://www.tooplate.com/view/2111-pro-line
             <h3 class="tm-feature-h">Education</h3>
           </header>
           <p>
-            Phasellus tristique, sapien quis mattis pellentesque, felis turpis
-            placerat turpis, nec viverra quam nisl at velit. Pellentesque
-            iaculis convallis egestas.
+            At NextLevel Redmond, we try to teach skills that put our students on a path fo lifelong success.
           </p>
           <p>
-            Nunc ut elit eget velit mollis sodales. Ut non mauris ut ligula
-            mattis consectetur. Aenean augue arcu, rhoncus at nibh nec, lacinia
-            blandit nulla.
+            We also run a Redmond COVID-19 Recovery Fund for the community, which you can donate to <a href="htps://http://gf.me/u/x27wbq">here</a>.
           </p>
         </section>
       </div>
@@ -137,9 +127,7 @@ http://www.tooplate.com/view/2111-pro-line
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Jay Dharmadhikari</h3>
               <p>
-                Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Sed eu turpis nec sem lacinia
-                condimentum et a orci.
+                A two-time State Competitor in Congressional Debate and the Vice President of the Redmond High School Speech and Debate team. He is passionate about introducing new forms of online education to Redmond and giving back to his educational community. His other passions include graphic design and programming. He’s always looking for new opportunities - contact him here.
               </p>
               <a href="https://www.linkedin.com/in/jay-dharmadhikari-751745190" class="btn tm-btn tm-float-right">Contact</a>
             </div>
@@ -153,9 +141,7 @@ http://www.tooplate.com/view/2111-pro-line
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Dhruv Naik</h3>
               <p>
-                Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Sed eu turpis nec sem lacinia
-                condimentum et a orci.
+                Winner of the 2019 Redmond High School Culinary Club Competition. Dedicated to providing better education to his community. A passionate chef and home cook, he is always looking for creative ways for improvement. He is also a talented front-end developer and programmer. Don't hesitate to reach out to him here.
               </p>
               <a href="https://www.linkedin.com/in/dhruv-naik-a4a21b18a" class="btn tm-btn tm-float-right">Contact</a>
             </div>
