--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ http://www.tooplate.com/view/2111-pro-line
     <div class="container" id="home">
       <div class="col-12 text-center">
         <div class="tm-page-header">
-          <img src="img/logo3.png" />
+          <a href="https://nextlevelredmond.com"><img src="img/logo3.png" /></a>
           <h1 class="d-inline-block">NextLevel</h1>
         </div>
       </div>
