--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ http://www.tooplate.com/view/2111-pro-line
             At NextLevel Redmond, we try to teach skills that put our students on a path fo lifelong success.
           </p>
           <p>
-            We also run a Redmond COVID-19 Recovery Fund for the community, which you can donate to <a href="htps://http://gf.me/u/x27wbq">here</a>.
+            We also run a Redmond COVID-19 Recovery Fund for the community, which you can donate to <a href="https://gf.me/u/x27wbq">here</a>.
           </p>
         </section>
       </div>
