--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ http://www.tooplate.com/view/2111-pro-line
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Dhruv Naik</h3>
               <p>
-                Winner of the 2019 Redmond High School Culinary Club Competition. Dedicated to providing better education to his community. A passionate chef and home cook, he is always looking for creative ways for improvement. He is also a talented front-end developer and programmer. Don't hesitate to reach out to him here.
+                Winner of the 2019 Redmond High School Culinary Club Competition. He is extremely dedicated to providing better education to his local Redmond community. A passionate chef and home cook, he is always looking for creative ways to improve his artistry and cooking skills. He is also a talented front-end developer and programmer. Don't hesitate to reach out to him here.
               </p>
               <a href="https://www.linkedin.com/in/dhruv-naik-a4a21b18a" class="btn tm-btn tm-float-right">Contact</a>
             </div>
