--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>NextLevel Redmond</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
@@ -23,84 +24,73 @@ http://www.tooplate.com/view/2111-pro-line
 
   <body>
     <!-- page header -->
-    <div class="container" id="home">
-      <div class="col-12 text-center">
-        <div class="tm-page-header">
-          <a href="https://nextlevelredmond.com"><img src="img/logo3.png" /></a>
-          <h1 class="d-inline-block">NextLevel</h1>
+    <div class="container">
+      <nav>
+        <input type="checkbox" id="nav" class="hidden" />
+        <label for="nav" class="nav-btn">
+          <i></i>
+          <i></i>
+          <i></i>
+        </label>
+        <div class="logo">
+          <a href="https://nextlevelredmond.com">NextLevel Education</a>
         </div>
-      </div>
-    </div>
-    <!-- navbar -->
-    <div class="tm-nav-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <nav class="navbar navbar-expand-md navbar-light">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#tmMainNav"
-                aria-controls="tmMainNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-              <div class="collapse navbar-collapse" id="tmMainNav">
-                <ul class="navbar-nav mx-auto tm-navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link external" href="https://nextlevelredmond.com">Home </a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link external" href="https://nextlevelredmond.com/about">About <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link external" href="https://nextlevelredmond.com/courses">Courses</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link external" href="https://nextlevelredmond.com/enroll">Enroll</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link external" href="https://nextlevelredmond.com/donate">Donate</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
+        <div class="nav-wrapper">
+          <ul>
+            <li><a href="https://nextlevelredmond.com/about/">About</a></li>
+            <li><a href="https://nextlevelredmond.com/courses/">Courses</a></li>
+            <li><a href="https://nextlevelredmond.com/enroll/">Enroll</a></li>
+            <li><a href="https://nextlevelredmond.com/donate/">Donate</a></li>
+          </ul>
         </div>
-      </div>
+      </nav>
     </div>
-
     <!-- Features -->
-    <div class="container tm-features-section" id="features">
-      <div class="row tm-features-row">
-        <section class="col-md-6 col-sm-12 tm-feature-block">
-          <header class="tm-feature-header">
-            <i class="fas fa-5x fa-globe-americas tm-feature-icon"></i>
-            <h3 class="tm-feature-h">Mission</h3>
-          </header>
+    <div class="spacer" />
+    <div class="photo">
+      <h3 class="aboutus">ABOUT US</h3>
+      <p class="w3-center w3-large">
+        <a href="mailto:nextlevelredmond@gmail.com">Contact</a>
+      </p>
+    </div>
+
+    <!---->
+    <div class="backgroundtop">
+      <div class="w3-row-padding w3-center" style="margin-top: 64px;">
+        <div class="w3-quarter">
+          <i class="fa fa-globe w3-margin-bottom w3-jumbo w3-center"></i>
+          <p class="w3-large">Community</p>
           <p>
-            NextLevel Redmond is run by two Redmond High School students who are passionate about using their skills to help the community around them.
+            NextLevel Redmond is run by two Redmond High School students who are
+            passionate about using their skills to help the community around
+            them.
           </p>
+        </div>
+        <div class="w3-quarter">
+          <i class="fa fa-exclamation-triangle w3-margin-bottom w3-jumbo"></i>
+          <p class="w3-large">Covid</p>
           <p>
-            Due to the pandemic, we are doing our best to provide free education over the internet. Students can learn important skills without leaving home.
+            Due to the pandemic we are duing our best to provide free education
+            over the internet. Students can learn important skills without
+            leaving home.
           </p>
-        </section>
-        <section class="col-md-6 col-sm-12 tm-feature-block">
-          <header class="tm-feature-header">
-            <i class="fas fa-5x fa-graduation-cap tm-feature-icon"></i>
-            <h3 class="tm-feature-h">Education</h3>
-          </header>
+        </div>
+        <div class="w3-quarter">
+          <i class="fa fa-graduation-cap w3-margin-bottom w3-jumbo"></i>
+          <p class="w3-large">Education</p>
           <p>
-            At NextLevel Redmond, we try to teach skills that put our students on a path fo lifelong success.
+            At NextLevel Redmond we try to teach skills that put our students on
+            a path fo lifelong success.
           </p>
+        </div>
+        <div class="w3-quarter">
+          <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
+          <p class="w3-large">Foundation</p>
           <p>
-            We also run a Redmond COVID-19 Recovery Fund for the community, which you can donate to <a href="https://gf.me/u/x27wbq">here</a>.
+            In return for our services we humbly request you to donate. We try
+            to distribute our funds to our local community.
           </p>
-        </section>
+        </div>
       </div>
     </div>
 
@@ -110,7 +100,7 @@ http://www.tooplate.com/view/2111-pro-line
         <div class="col-12">
           <div class="tm-parallax">
             <header class="tm-parallax-header">
-              <h2 class="">The Team</h2>
+              <h2 class="wordsteam">The Team</h2>
             </header>
           </div>
         </div>
@@ -119,35 +109,61 @@ http://www.tooplate.com/view/2111-pro-line
         <div class="col-lg-6">
           <div class="tm-activity-block">
             <div class="tm-activity-img-container">
-              <img src="img/jaypicture2.JPG" alt="Image" class="tm-activity-img" />
+              <img
+                src="img/jaypicture2.JPG"
+                alt="Image"
+                class="tm-activity-img"
+              />
             </div>
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Jay Dharmadhikari</h3>
               <p>
-                A two-time State Competitor in Congressional Debate and the Vice President of the Redmond High School Speech and Debate team. He is passionate about introducing new forms of online education to Redmond and giving back to his educational community. His other passions include graphic design and programming. He’s always looking for new opportunities - contact him here.
+                A two-time State Competitor in Congressional Debate and the Vice
+                President of the Redmond High School Speech and Debate team. He
+                is passionate about introducing new forms of online education to
+                Redmond and giving back to his educational community. His other
+                passions include graphic design and programming. He’s always
+                looking for new opportunities - contact him here.
               </p>
-              <a href="https://www.linkedin.com/in/jay-dharmadhikari-751745190" class="btn tm-btn tm-float-right">Contact</a>
+              <a
+                href="https://www.linkedin.com/in/jay-dharmadhikari-751745190"
+                class="btn tm-btn tm-float-right"
+                >Contact</a
+              >
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="tm-activity-block mr-lg-0 ml-lg-auto">
             <div class="tm-activity-img-container">
-              <img src="img/dhruvpicture2.jpg" alt="Image" class="tm-activity-img" />
+              <img
+                src="img/dhruvpicture2.jpg"
+                alt="Image"
+                class="tm-activity-img"
+              />
             </div>
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Dhruv Naik</h3>
               <p>
-                Winner of the 2019 Redmond High School Culinary Club Competition. He is extremely dedicated to providing better education to his local Redmond community. A passionate chef and home cook, he is always looking for creative ways to improve his artistry and cooking skills. He is also a talented front-end developer and programmer. Don't hesitate to reach out to him here.
+                Winner of the 2019 Redmond High School Culinary Club
+                Competition. He is extremely dedicated to providing better
+                education to his local Redmond community. A passionate chef and
+                home cook, he is always looking for creative ways to improve his
+                artistry and cooking skills. He is also a talented front-end
+                developer and programmer. Don't hesitate to reach out to him
+                here.
               </p>
-              <a href="https://www.linkedin.com/in/dhruv-naik-a4a21b18a" class="btn tm-btn tm-float-right">Contact</a>
+              <a
+                href="https://www.linkedin.com/in/dhruv-naik-a4a21b18a"
+                class="btn tm-btn tm-float-right"
+                >Contact</a
+              >
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    
     <footer class="container tm-footer">
       <div class="row tm-footer-row">
         <p class="col-md-10 col-sm-12 mb-0">
@@ -222,27 +238,23 @@ http://www.tooplate.com/view/2111-pro-line
 
       // Parallax function
       // https://codepen.io/roborich/pen/wpAsm
-      var background_image_parallax = function($object, multiplier) {
+      var background_image_parallax = function ($object, multiplier) {
         multiplier = typeof multiplier !== "undefined" ? multiplier : 0.5;
         multiplier = 1 - multiplier;
         var $doc = $(document);
         $object.css({ "background-attatchment": "fixed" });
-        $(window).scroll(function() {
+        $(window).scroll(function () {
           var from_top = $doc.scrollTop(),
             bg_css = "center " + multiplier * from_top + "px";
           $object.css({ "background-position": bg_css });
         });
       };
 
-      $(window).scroll(function() {
+      $(window).scroll(function () {
         if ($(this).scrollTop() > 50) {
-          $(".scrolltop:hidden")
-            .stop(true, true)
-            .fadeIn();
+          $(".scrolltop:hidden").stop(true, true).fadeIn();
         } else {
-          $(".scrolltop")
-            .stop(true, true)
-            .fadeOut();
+          $(".scrolltop").stop(true, true).fadeOut();
         }
 
         // Make sticky header
@@ -255,7 +267,7 @@ http://www.tooplate.com/view/2111-pro-line
 
       let videoSec;
 
-      $(function() {
+      $(function () {
         if (detectIE()) {
           alert(
             "Please use the latest version of Edge, Chrome, or Firefox for best browsing experience."
@@ -267,21 +279,21 @@ http://www.tooplate.com/view/2111-pro-line
           filter: ":not(.external)",
           offset: $(".tm-nav-section").outerHeight(),
           updateHash: true,
-          beforeStart: function() {
+          beforeStart: function () {
             mainNav.removeClass("show");
-          }
+          },
         });
 
         videoSec = $("#tmVideoSection");
 
         // Adjust height of video when window is resized
-        $(window).resize(function() {
+        $(window).resize(function () {
           setVideoHeight();
         });
 
         setVideoHeight();
 
-        $(window).on("load scroll resize", function() {
+        $(window).on("load scroll resize", function () {
           var scrolled = $(this).scrollTop();
           var vidHeight = $("#hero-vid").height();
           var offset = vidHeight * 0.6;
@@ -303,7 +315,7 @@ http://www.tooplate.com/view/2111-pro-line
         background_image_parallax($(".tm-parallax"), 0.4);
 
         // Back to top
-        $(".scroll").click(function() {
+        $(".scroll").click(function () {
           $("html,body").animate(
             { scrollTop: $("#home").offset().top },
             "1000"
